--- a/BirdNoBird.ipynb
+++ b/BirdNoBird.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1df57ba",
+   "id": "d559c8e5",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fab69c4f",
+   "id": "1919bdcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f4c0a57f",
+   "id": "6621f604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "339f764c",
+   "id": "9f7ce660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,21 +84,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0753b3ef",
+   "execution_count": 6,
+   "id": "4e1703ec",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-22 14:19:33.464955: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN)to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-04-22 14:19:33.481538: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7f7e3235f430 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2022-04-22 14:19:33.481552: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
       "/Users/amandabreton/anaconda3/lib/python3.8/site-packages/microfaune/audio.py:23: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
-      "  fs, data = wavfile.read(path)\n",
-      "/var/folders/jp/8z738skn0x1f_g7hs22hqvzc0000gn/T/ipykernel_2106/253138433.py:18: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "  fs, data = wavfile.read(path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fc57cfada60> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jp/8z738skn0x1f_g7hs22hqvzc0000gn/T/ipykernel_1388/253138433.py:18: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
       "  s, audData = scipy.io.wavfile.read(currentSoundPath)\n"
      ]
     },
@@ -106,7 +115,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f7e198518b0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fc57b29e790> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "WARNING:tensorflow:7 out of the last 7 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fc56bf475e0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "WARNING:tensorflow:8 out of the last 8 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fc56c782af0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     }
    ],
@@ -136,14 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "27e479e9",
+   "execution_count": 10,
+   "id": "1d7621f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %% print to a CSV file to view\n",
     "df = pd.DataFrame(list(zip(audioList, confidence)), columns=['Audio_Name', 'Highest_Confidence'])\n",
+    "path = CSVpath + \"/BirdConfidences.csv\"\n",
     "\n",
+    "extension = '.csv'\n",
     "if os.path.exists(os.path.join(CSVpath, \"BirdConfidences.csv\")):\n",
     "    counter = 1\n",
     "    while os.path.exists(path):\n",
@@ -158,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c8ae2c",
+   "id": "7fb5613c",
    "metadata": {},
    "outputs": [],
    "source": []
