one last repo push :)

--- a/identifybird.ipynb
+++ b/identifybird.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33901084",
+   "id": "c4dc56e4",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "18b679a8",
+   "id": "d5aecea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b16495ec",
+   "execution_count": 3,
+   "id": "80f7fa11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f58e06f3",
+   "execution_count": 4,
+   "id": "ead39fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5527dd7c",
+   "execution_count": 5,
+   "id": "b3934951",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
       "IMPORTING MODEL PARAMS... DONE! \n",
       "COMPILING THEANO TEST FUNCTION FUNCTION... DONE! \n",
       "LOADING eBIRD GRID DATA... DONE! 13800 GRID CELLS \n",
-      "SID: 1 PROCESSING: kids.wav SPECIES: 987 DETECTIONS: 20 TIME: 4 \n",
+      "SID: 1 PROCESSING: plover.wav SPECIES: 987 DETECTIONS: 10 TIME: 1 \n",
       "BirdNET done analyzing  audio file #0\n",
       "FILES IN DATASET: 1 \n",
       "LOADING SNAPSHOT BirdNET_Soundscape_Model.pkl ... DONE! \n",
@@ -121,26 +121,54 @@
       "IMPORTING MODEL PARAMS... DONE! \n",
       "COMPILING THEANO TEST FUNCTION FUNCTION... DONE! \n",
       "LOADING eBIRD GRID DATA... DONE! 13800 GRID CELLS \n",
-      "SID: 1 PROCESSING: catpurr.wav SPECIES: 987 DETECTIONS: 6 TIME: 1 \n",
-      "BirdNET done analyzing  audio file #1\n",
-      "FILES IN DATASET: 1 \n",
-      "LOADING SNAPSHOT BirdNET_Soundscape_Model.pkl ... DONE! \n",
-      "BUILDING BirdNET MODEL... DONE! \n",
-      "IMPORTING MODEL PARAMS... DONE! \n",
-      "COMPILING THEANO TEST FUNCTION FUNCTION... DONE! \n",
-      "LOADING eBIRD GRID DATA... DONE! 13800 GRID CELLS \n",
-      "SID: 1 PROCESSING: school.wav SPECIES: 987 DETECTIONS: 25 TIME: 4 \n",
-      "BirdNET done analyzing  audio file #2\n",
-      "FILES IN DATASET: 1 \n",
-      "LOADING SNAPSHOT BirdNET_Soundscape_Model.pkl ... DONE! \n",
-      "BUILDING BirdNET MODEL... DONE! \n",
-      "IMPORTING MODEL PARAMS... DONE! \n",
-      "COMPILING THEANO TEST FUNCTION FUNCTION... DONE! \n",
-      "LOADING eBIRD GRID DATA... DONE! 13800 GRID CELLS \n",
-      "SID: 1 PROCESSING: VioletBelliedHummingbird.wav SPECIES: 987 DETECTIONS: 19 TIME: 3 \n",
+      "SID: 1 PROCESSING: Hummingbird.wav SPECIES: 987 DETECTIONS: 8 TIME: 2 \n",
+      "BirdNET done analyzing  audio file #1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: analyze.py [-h] [--i I] [--o O] [--filetype FILETYPE]\n",
+      "                  [--results RESULTS] [--lat LAT] [--lon LON] [--week WEEK]\n",
+      "                  [--overlap OVERLAP] [--spp SPP] [--sensitivity SENSITIVITY]\n",
+      "                  [--min_conf MIN_CONF]\n",
+      "analyze.py: error: unrecognized arguments: WingBandedAntbird.wav\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BirdNET done analyzing  audio file #2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: analyze.py [-h] [--i I] [--o O] [--filetype FILETYPE]\n",
+      "                  [--results RESULTS] [--lat LAT] [--lon LON] [--week WEEK]\n",
+      "                  [--overlap OVERLAP] [--spp SPP] [--sensitivity SENSITIVITY]\n",
+      "                  [--min_conf MIN_CONF]\n",
+      "analyze.py: error: unrecognized arguments: Martin.wav\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BirdNET done analyzing  audio file #3\n",
+      "FILES IN DATASET: 1 \n",
+      "LOADING SNAPSHOT BirdNET_Soundscape_Model.pkl ... DONE! \n",
+      "BUILDING BirdNET MODEL... DONE! \n",
+      "IMPORTING MODEL PARAMS... DONE! \n",
+      "COMPILING THEANO TEST FUNCTION FUNCTION... DONE! \n",
+      "LOADING eBIRD GRID DATA... DONE! 13800 GRID CELLS \n",
+      "SID: 1 PROCESSING: CactusWren.wav SPECIES: 987 DETECTIONS: 6 TIME: 1 \n",
       "BirdNET done analyzing  audio file #4\n",
-      "BirdNET done analyzing 5 audio files\n"
+      "BirdNET done analyzing  audio file #5\n",
+      "BirdNET done analyzing 6 audio files\n"
      ]
     },
     {
@@ -174,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7c86f19e",
+   "execution_count": 6,
+   "id": "fa41b1f1",
    "metadata": {},
    "outputs": [
     {
@@ -183,17 +211,15 @@
      "output_type": "stream",
      "text": [
       "The most probable bird detections in this batch are as follows:\n",
-      "                     Species  Confidence Audio Source\n",
-      "0  Ruby-throated Hummingbird    0.934627  catpurr.wav\n",
-      "1                      Human    0.912129     kids.wav\n",
-      "2                      Human    0.897218     kids.wav\n",
-      "3                      Human    0.906209     kids.wav\n",
-      "4                      Human    0.920930     kids.wav\n",
-      "5               Canada Goose    0.925412     kids.wav\n",
+      "                Species  Confidence    Audio Source\n",
+      "0           Cactus Wren    0.999124  CactusWren.wav\n",
+      "1           Cactus Wren    0.858004  CactusWren.wav\n",
+      "2  Little Ringed Plover    0.999680      plover.wav\n",
+      "3  Little Ringed Plover    0.999914      plover.wav\n",
+      "4        Kentish Plover    0.925946      plover.wav\n",
+      "5  Little Ringed Plover    0.999832      plover.wav\n",
       "Here are the species found:\n",
-      "['Ruby-throated Hummingbird', 'Human', 'Canada Goose']\n",
-      "If you would like to investigate further, please run:\n",
-      "eventplotter.py or eventplotter_all.py\n"
+      "['Cactus Wren', 'Little Ringed Plover', 'Kentish Plover']\n"
      ]
     }
    ],
@@ -252,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8bc9348",
+   "id": "8f59fc61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -260,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bff9e72",
+   "id": "a7f94b8a",
    "metadata": {},
    "outputs": [],
    "source": []
